<resources>
  <string name="cancel">Cancel</string>
  <string name="internet_no_connection">Internet connection not available. Please try again later.</string>
  <string name="app_name">multiGame</string>
  <string name="app_id" translatable="false">225517634276553</string>
  <string name="edit_message">Enter a message</string>
  <string name="button_send">Send</string>
  <string name="menu_settings">Settings</string>
  <string name="title_activity_main">multiGame</string>
  <string name="button_game">Start!</string>
  <string name="button_resume">Resume the game!</string>
  <string name="button_resume_tutorial">Resume the tutorial!</string>
  <string name="button_customization_center">Your Path</string>
  <string name="button_hall_of_fame">Hall of Heroes</string>
  <string name="button_preferences">Preferences</string>
  <string name="tutorial_welcome_title">Welcome mortal!</string>
  <string name="tutorial_welcome">Gods of multitasking have chosen YOU amongst the whole mankind to represent humanity in the multitasking heaven. \n\nFirst however you have to prove you are able to master single games from different gods!</string>
  <string name="tutorial_positive">Let\'s show them!</string>
   <string name="minigame">\u0020Minigame\u0020</string>
  <string name="minigames_VBird_title">Behold!</string>
  <string name="minigames_VBird_description"><![CDATA[I am VERTICA the one and only goddess from the updown universe!<br><br>To earn my respect do not let my all-seying eye hit any obstacle or you will be punished! (<strong><u>tilt</u></strong> your cell phone vertically <strong><u>up</u></strong> and <strong><u>down</strong></u>)]]></string>
  <string name="minigames_HBalance_title">Well done, mortal!</string>
  <string name="minigames_HBalance_description"><![CDATA[My name is HORI-ZON and I represent the leftright universe!<br><br>You must not let the the justice of the world fall off the scales! Or you should fall as well!</strong></u> (<strong><u>Tilt</u></strong> your cell phone horizontally to the <strong><u>left and right</strong></u>)]]></string>
  <string name="minigames_TCatcher_title">Greetings!</string>
  <string name="minigames_TCatcher_description"><![CDATA[I am TAPO-NASHI the creator of the universe of TAP!<br><br>The falling meteors of apocalypse must not hit the gateways to parallel void universes or the world will cease to exist. Failure is not an option! (Make gateways open by <strong><u>tapping</strong></u> on them)]]></string>
  <string name="minigames_TGatherer_title">Good job so far!</string>
  <string name="minigames_TGatherer_description"><![CDATA[Hi, I am TAPO-SAN, son of the great TAPO-NASHI!<br><br>You must collect all of the fallen souls of heroes before they vanish forever. (Gather souls by <strong><u>tapping</strong></u> on them before the time passes.)]]></string>
  <string name="tutorial_ok">OK</string>
  <string name="first_multitask_title">Excellent!</string>
  <string name="first_multitask_description"><![CDATA[We have concluded that YOU in the end might be worthy of our divine time.<br><br>Let\'s start slowly with your multitasking abilities. As the time passes we will add more and more games!]]></string>
  <string name="first_multitask_ok">I am ready!</string>
  <string name="minigames_TInvader_description"><![CDATA[Move the laser field by tapping on the screen. The enemies must not get to the center.]]></string>
  <string name="minigames_VBouncer_description"><![CDATA[Move the platform by tilting your phone to the front or to the back. The ball must not touch the left side of the screen.]]></string>
  <string name="tutorial_finished_title">We are impressed!</string>
  <string name="tutorial_finished">You have finished the first trial (actually the first human to do so).\n\nWe will spare your world this time, but there are great battles ahead if you want to become one of us.</string>
  <string name="tutorial_finished_ok">That was easy!</string>
  <string name="tutorial_failed_title">Whoops!</string>
  <string name="tutorial_failed">It\'s okay, no one ever did it the first time. Gods are patient or at least let\'s hope so…</string>
  <string name="tutorial_try_again">I can do it!</string>
  <string name="game_welcome_title">Welcome adept!</string>
  <string name="game_welcome">You have shown some skills however that is not enough. Gods have prepared some challenges for you until you would be able to face the final test.\n\nFirst try to get at least 1000 multitasking points. Good luck! (You can check the other challenges in the menu)</string>
  <string name="game_positive">Great!</string>
  <string name="score">Score:\u0020</string>
  <string name="game_achievement_fulfilled_1">Achievement fulfilled:\u0020</string>
  <string name="game_achievement_fulfilled_2">.\u0020New\u0020</string>
  <string name="game_achievement_fulfilled_3">\u0020unlocked!</string>
  <string name="game_achievement_adfree_fulfilled">Achievement fulfilled: Ad-free version</string>
  <string name="game_winner_title">Gods are delighted!</string>
  <string name="game_winner">You have made it to the Hall of Heroes! Please provide your name and enjoy being a celebrity.</string>
  <string name="game_ask_for_name">Please provide your name for the Hall of Heroes.</string>
  <string name="game_loser_title">Gods are not happy!</string>
  <string name="game_loser">Your score was not good enough to make this try worthwhile and enter the Hall of Heroes. Better luck next time!</string>
  <string name="game_share">Share</string>
  <string name="game_share_no_connection">You wanted to share your score, but there does not appear to be any internet connection available.. Try again?</string>
  <string name="game_retry">Retry</string>
  <string name="facebook_login_failed">Sorry, facebook login failed.</string>
  <string name="facebook_label">Check out my multitasking skills!</string>
  <string name="facebook_description1">I just achieved incredible\u0020</string>
  <string name="facebook_description2">\u0020points in Multigame! Can you beat that?</string>
  <string name="cc_unlocks">unlocks\u0020</string>
  <string name="cc_music_tab_name">MUSIC</string>
  <string name="cc_music_tab_text">Choose music created in different universes</string>
  <string name="cc_minigames_tab_name">MINIGAMES</string>
  <string name="cc_minigames_tab_text">Choose favorite games from your gods</string>
  <string name="cc_skins_tab_name">THEMES</string>
  <string name="cc_skins_tab_text">Gods are so merciful that they will let you achieve your quest using their eyes. Choose one you like</string>
  <string name="cc_achievements_tab_name">CHALLENGES</string>
  <string name="cc_achievements_tab_text">These challenges were given to you by the allmighty gods in order to prepare you for your final one. They will reward you with various gifts along your path.</string>
  <string name="cc_more_games_tab_name">More games</string>
  <string name="cc_achievements_achievements_center_name">Achievements</string>
  <string name="cc_achievements_addict_name">PERSISTENT</string>
  <string name="cc_achievements_addicts_description">Play at least 10 games</string>
  <string name="cc_achievements_champion_name">HERO</string>
  <string name="cc_achievements_champion_description">Be in the Hall of Heroes</string>
  <string name="cc_achievements_good_start_name">WORTHY</string>
  <string name="cc_achievements_good_start_description">Reach score of 5000</string>
  <string name="cc_achievements_lucky_seven_name">SEMI-GOD</string>
  <string name="cc_achievements_lucky_seven_description">Reach level 7</string>
  <string name="cc_achievements_magin_ten_name">GOD</string>
  <string name="cc_achievements_magin_ten_description">Reach level 10</string>
  <string name="cc_achievements_supporter_name">IMMORTAL</string>
  <string name="cc_achievements_supporter_description">Rate Multigame on Google Play</string>
  <string name="cc_achievements_competitive_name">EVANGELIST</string>
  <string name="cc_achievements_competitive_description">Share your score on Facebook</string>
  <string name="cc_achievements_pro_name">PRO</string>
  <string name="cc_achievements_pro_description">Reach level 15</string>
  <string name="cc_achievements_requirement_ending">\u0020in order to unlock this item</string>
  <string name="cc_minigames_minigame_center_name">Minigames</string>
  <string name="cc_minigames_minigame_name">minigame</string>
  <string name="cc_minigames_bouncer_name">Bouncer</string>
  <string name="cc_minigames_invader_name">Invader</string>
  <string name="cc_skins_skin_center_name">Themes</string>
  <string name="cc_skins_skin_name">theme</string>
  <string name="cc_skins_girl_power_name">Threshold</string>
  <string name="cc_skins_summer_name">Diffuse</string>
  <string name="cc_skins_blue_sky_name">Corrupted</string>
  <string name="cc_skin_unlock_message_1">"You must reach level 7 order to unlock this skin"</string>
  <string name="cc_skin_unlock_message_2">"You must reach level 7 order to unlock this skin"</string>
  <string name="cc_music_music_center_name">Music</string>
  <string name="cc_music_music_name">music</string>
  <string name="cc_music_cyber_ops_name">Cyber Ops</string>
  <string name="cc_music_cv_x_name">CV X</string>
  <string name="cc_music_blam_name">Blam</string>
  <string name="hof_top_10_players">Hall of Heroes</string>
  <string name="hof_local">LOCAL</string>
  <string name="hof_online">ONLINE</string>
  <string name="game_touch_start">Touch the screen to start the game!</string>
  <string name="game_touch_resume">Touch the screen to resume the game!</string>
  <string name="game_touch_save">You can save your progress anytime by using the \'back\' button.</string>
  <string name="game_game_saved">Game saved</string>
  <string name="pref_title">Preferences</string>
  <string name="pref_gameMode_Tutorial">Tutorial</string>
  <string name="pref_gameMode_Classic">Classic</string>
  <string name="finish_saved_game">Please finish your saved game first.</string>
  <string name="pref_music">Music</string>
  <string name="pref_sound">Sound</string>
  <string name="pref_autocalibration">Autocalibration</string>
  <string name="pref_autocalibration_subtitle">Set the default X,Y axis for rotation based on the position of cell phone at the beginning of each game</string>
  <string name="pref_about">About…</string>
  <string name="pref_game_mode">Game mode</string>
  <string name="pref_rate">Rate on Google Play</string>
  <string name="pref_on">ON</string>
  <string name="pref_off">OFF</string>
  <string name="rate">Rate</string>
  <string name="rate_msg">Would you like to rate Multigame 5 stars on Google Play?</string>
  <string name="button_hall_of_fame_multigame_fan">Multigame fan</string>
  <string name="increase_music_volume">Increasing volume will improve your gameplay experience.</string>
  <string name="com_facebook_dialogloginactivity_ok_button">OK</string>
  <string name="com_facebook_loginview_log_out_button">Log out</string>
  <string name="com_facebook_loginview_log_in_button">Log in with Facebook</string>
  <string name="com_facebook_loginview_logged_in_as">Logged in as: %1$s</string>
  <string name="com_facebook_loginview_logged_in_using_facebook">Logged in using Facebook</string>
  <string name="com_facebook_loginview_log_out_action">Log out</string>
  <string name="com_facebook_loginview_cancel_action">Cancel</string>
  <string name="com_facebook_logo_content_description">Facebook Logo</string>
  <string name="com_facebook_usersettingsfragment_log_in_button">Log in…</string>
  <string name="com_facebook_usersettingsfragment_logged_in">Logged in</string>
  <string name="com_facebook_usersettingsfragment_not_logged_in">Not logged in</string>
  <string name="sign_in_why">Sign in with Google to share your scores and achievements with your friends.</string>
  <string name="you_are_signed_in">You are signed in with Google.</string>
  <string name="sign_out">Sign out</string>
</resources>