<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true"
        android:layout_gravity="center_horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <CheckedTextView
                android:id="@+id/customize_minigames"
                style="@style/TextView.Customize.MenuItem"
                android:text="@string/cc_minigames_tab_name" />

            <CheckedTextView
                android:id="@+id/customize_skins"
                style="@style/TextView.Customize.MenuItem"
                android:text="@string/cc_skins_tab_name" />

            <CheckedTextView
                android:id="@+id/customize_music"
                style="@style/TextView.Customize.MenuItem"
                android:text="@string/cc_music_tab_name" />

            <CheckedTextView
                android:id="@+id/customize_achievements"
                style="@style/TextView.Customize.MenuItem"
                android:text="@string/cc_achievements_tab_name" />

        </LinearLayout>
    </HorizontalScrollView>

    <android.support.v4.view.ViewPager
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>