<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/xml_bg_quad"
    android:orientation="vertical">

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="0dp"
      android:layout_weight="1"
      android:padding="10dp"
      android:gravity="center">

    <ImageView
        android:id="@+id/logo"
        android:src="@drawable/ic_logo_port"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
  </LinearLayout>

  <LinearLayout
      android:orientation="vertical"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginBottom="50dp">

    <TextView
        android:id="@+id/menu_start"
        style="@style/TextView.Menu"
        android:onClick="startGame"
        android:text="@string/button_game"
        android:fontFamily="sans-serif-black"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/menu_customize"
        style="@style/TextView.Menu"
        android:onClick="showMGC"
        android:text="@string/button_customization_center"
        android:fontFamily="sans-serif-medium" />

    <TextView
        android:id="@+id/menu_preferences"
        style="@style/TextView.Menu"
        android:onClick="showPreferences"
        android:text="@string/button_preferences"
        android:fontFamily="sans-serif-light" />

    <TextView
        android:id="@+id/menu_hall_of_fame"
        style="@style/TextView.Menu"
        android:onClick="showHallOfFame"
        android:text="@string/button_hall_of_fame"
        android:fontFamily="sans-serif-thin" />

  </LinearLayout>
</LinearLayout>
