<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/xml_bg_quad"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

  <TextView
      android:id="@+id/hof_header"
      style="@style/TextView.Header"
      android:text="@string/hof_top_10_players"
      android:layout_gravity="center_horizontal" />

  <include layout="@layout/hof_switch" />

  <ListView
      android:id="@+id/hof_list"
      android:layout_width="match_parent"
      android:layout_height="0dp"
      android:layout_weight="1"
      tools:listitem="@layout/hof_list_item"
      android:divider="@null" />

  <LinearLayout
      android:id="@+id/sign_in_bar"
      android:layout_height="wrap_content"
      android:layout_width="match_parent"
      android:background="#f0f0f0"
      android:orientation="horizontal"
      android:gravity="center"
      android:padding="10dp"
      android:layout_gravity="bottom"
      android:visibility="gone">

    <com.google.android.gms.common.SignInButton
        android:id="@+id/sign_in_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/sign_in_message"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:text="@string/sign_in_why" />
  </LinearLayout>

  <LinearLayout
      android:id="@+id/sign_out_bar"
      android:layout_height="wrap_content"
      android:layout_width="match_parent"
      android:background="#f0f0f0"
      android:orientation="horizontal"
      android:gravity="center|right"
      android:layout_gravity="bottom"
      android:padding="10dp"
      android:visibility="gone">

    <TextView
        android:id="@+id/sign_out_message"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/you_are_signed_in" />

    <Button
        android:id="@+id/sign_out_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_out"
        android:textSize="12sp" />
  </LinearLayout>
</LinearLayout>